fix: don't cause overflow in selectable list

--- a/styles/shared/SelectableList.scss
+++ b/styles/shared/SelectableList.scss
@@ -10,10 +10,10 @@
     padding-left: 10px;
     height: 22px;
     cursor: pointer;
+
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    vertical-align: middle;
     border-color: transparent;
 
     &:hover {
